Actualise upadte and Main data